handle validation with transaltion

--- a/public/assets/i18n/ar.json
+++ b/public/assets/i18n/ar.json
@@ -1,7 +1,13 @@
 {
   "TITLE": "تجربة التحقق باستخدام التولتيب",
-  "NAME_LABEL": "الاسم",
+  "NO_RESULTS": "لا توجد نتائج",
+  "AR_NAME_LABEL": "الاسم بالعربية",
+  "EN_NAME_LABEL": "الاسم بالإنجليزية",
   "EMAIL_LABEL": "البريد الإلكتروني",
-  "ONLY_LETTERS": "مسموح فقط باستخدام الحروف",
-  "INVALID_EMAIL": "أدخل بريدًا إلكترونيًا صحيحًا"
+  "AGE_LABEL": "العمر",
+  "ONLY_ARABIC": "مسموح فقط باستخدام الحروف العربية",
+  "ONLY_LETTERS": "مسموح فقط باستخدام الحروف الإنجليزية",
+  "INVALID_EMAIL": "أدخل بريدًا إلكترونيًا صحيحًا",
+  "INVALID_AGE": "أدخل عمرًا صحيحًا (من 18 إلى 50)",
+  "SUBMIT": "إرسال"
 }
